--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,5 @@
 [build]
-  functions = "functions/"
+  command = "npm run build" 
+  publish = "dist"
+  functions = "functions" 
+  include = "node_modules/**" 
